--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Site Plan</title>
-  <link type="text/css" rel="stylesheet" href="/w2 wrr/ styles/site-plan-rafting.css" />
+  <link type="text/css" rel="stylesheet" href="/wwr/ styles/site-plan-rafting.css" />
 </head>
 
 <body>
@@ -32,7 +32,7 @@
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="/w2 wrr/images/logo.webp" alt="Logo image" />
+    <img src="/wwr/images/logo.webp" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
