CSS Changes for w5

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -40,7 +40,7 @@
                 <h2>Rivers</h2>
             </section>
             <section class="camping-card">
-                <img class="card-img" src="./image/Camping.jpg" alt="tent in mountains">
+                <img class="card-img" src="./image/Rapids.jpg" alt="tent in mountains">
                 <img class="icon" src="./image/Fire Icon.png" alt="fire icon">
                 <h2>Camping</h2>
             </section>
