--- a/wwr/index.html
+++ b/wwr/index.html
@@ -8,30 +8,31 @@
 </head>
 <body>
     <div id="content">
-        <header>
-                <a id="logo_link" href="index.html">
-                    <img class="logo" src="./image/logo.webp" alt="Dry Oar Logo">
-                </a>
-                <nav>
-                    <a href="index.html">Home</a>
-                    <a href="#">Page 2</a>
-                    <a href="site-plan-rafting.html">Site Plan</a>
-                    <a href="contactus.html">Contact Us</a>
-                </nav>
-        </header>
+<header>
+    <a id="logo_link" href="index.html">
+        <img class="logo" src="./image/logo.webp" alt="Dry Oar Logo">
+    </a>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="#">Page 2</a>
+        <a href="site-plan-rafting.html">Site Plan</a>
+        <a href="contactus.html">Contact Us</a>
+    </nav>
+</header>
 
-        <div id="hero">
-            <div id="hero-box">
-                <img id="hero-img" src="./image/Hero.png" alt="People enjoying white water rafting">
-            </div>
-            <section id="hero-msg">
-                <h1 class="home-title">Have An Adventure</h1>
-                <h4>Make Memories with Dry Oar </h4>
-                <div class='button-box'>
-                    <a class='book' href="contactus.html">Book Now</a>
-                </div>
-            </section>
+<div id="hero">
+    <div id="hero-box">
+        <img id="hero-img" src="./image/Hero.png" alt="People enjoying white water rafting">
+    </div>
+    <section id="hero-msg">
+        <h1 class="home-title">Have An Adventure</h1>
+        <h4>Make Memories with Dry Oar</h4>
+        <div class="button-box">
+            <a class="book" href="rates.html">Book Now</a>
         </div>
+    </section>
+  </div>
+           
 
         <main class="home-grid">
             <section class="rivers-card">
@@ -41,7 +42,7 @@
             </section>
             <section class="camping-card">
                 <img class="card-img" src="./image/Rapids.jpg" alt="tent in mountains">
-                <img class="icon" src="./image/Fire Icon.png" alt="fire icon">
+                <img class="icon" src="./image/Fire Icon 100x100.png" alt="fire icon">
                 <h2>Camping</h2>
             </section>
             <section class="rapids-card">
@@ -56,7 +57,9 @@
                 <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
                 <a class='join' href="rivers.html">Join Us</a>
             </section>
+
         </main>
+        
         <footer>
             <p>Dry Oar &copy; 2025 - Adam Herrmann</p>
             <p><a href="./site-plan-rafting.html">Site Plan</a></p>
