--- a/wwr/index.html
+++ b/wwr/index.html
@@ -7,16 +7,16 @@
     <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
 </head>
 <body>
-    <div id="content">
+
 <header>
     <a id="logo_link" href="index.html">
         <img class="logo" src="./image/logo.webp" alt="Dry Oar Logo">
     </a>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="#">Page 2</a>
-        <a href="site-plan-rafting.html">Site Plan</a>
-        <a href="contactus.html">Contact Us</a>
+        <a href="./index.html">Home</a>
+        <a href="./pages/page2.html">Page 2</a>
+        <a href="./pages/site-plan-rafting.html">Site Plan</a>
+        <a href="./pages/contactus.html">Contact Us</a>
     </nav>
 </header>
 
@@ -62,8 +62,8 @@
         
         <footer>
             <p>Dry Oar &copy; 2025 - Adam Herrmann</p>
-            <p><a href="./site-plan-rafting.html">Site Plan</a></p>
-            <p><a href="./contactus.html">Contact Us</a></p>
+            <p><a href="./pages/site-plan-rafting.html">Site Plan</a></p>
+            <p><a href="./pages/contactus.html">Contact Us</a></p>
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
                     <img src="./image/Facebook Icon.png" alt="fb icon">
