Fix image paths and adjust margin in CSS

--- a/wwr/pages/site-plan-rafting.html
+++ b/wwr/pages/site-plan-rafting.html
@@ -32,7 +32,7 @@
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="./image/logo.webp" alt="Logo image" />
+    <img src="../image/logo.webp" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
@@ -90,9 +90,9 @@
     <h3>Navigation with Hover</h3>
     <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
     <nav>
-      <a href="#">Home</a>
-      <a href="#">Page2</a>
-      <a href="#">Contact Us</a>
+      <a href="../index.html">Home</a>
+      <a href="./page2.html">Page2</a>
+      <a href="./contactus.html">Contact Us</a>
     </nav>
     <hr />
     <h2>Site Map</h2>
@@ -118,7 +118,7 @@
 
     <h3>[Page 2]</h3>
 
-    <!-- <img src="#" alt="page 2 wireframe"> -->
+   <img src="../image/wireframe.png" alt="page 2 wireframe">
   </main>
 </body>
 
