`Refactor site-plan-rafting.html and site-plan-rafting.css to change website purpose and branding to focus on whitewater rafting experiences.`

--- a/wwr/pages/site-plan-rafting.html
+++ b/wwr/pages/site-plan-rafting.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en-us">
 
@@ -21,12 +19,19 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>This innovative website is designed to serve as a centralized hub for seamlessly connecting multiple services through APIs, creating a dynamic and customizable user experience. Users can integrate platforms like Discord, self-hosted services, and other essential tools, each displayed within interactive, containerized widgets. These widgets are fully movable and repositionable, allowing users to tailor their homepage layout to their specific needs and preferences. Whether managing communication, monitoring server stats, or accessing personal tools, this platform combines functionality with a sleek and intuitive design, making it an all-in-one solution for a connected digital experience.</p>
-    <!-- change this -->
+    <p>
+      This website serves as an informational hub for those interested in whitewater rafting experiences. 
+      It provides details about various river routes, their unique landscapes, and the wildlife found along them. 
+      Users can explore trip options, safety guidelines, and frequently asked questions to ensure they are well-prepared for their adventure. 
+      Whether looking for thrilling rapids or scenic river journeys, this platform offers everything needed to plan an unforgettable rafting trip.
+    </p>
 
     <h3>Audience</h3>
-    <p>Personal Use Cases OR Managorial positions for multi server managerment services, IT, and other multi computer services. It also can be used for college students and other types of people. I think payment plans could be great with monthly subsciptions.</p>
-    <!-- change this -->
+    <p>
+      This site is designed for outdoor enthusiasts, adventure seekers, and families looking for exciting river rafting experiences. 
+      It caters to individuals planning their first trip, experienced rafters searching for new challenges, and those interested in guided tours. 
+      Additionally, it provides essential information for parents considering rafting with children, as well as resources for those interested in the natural history and unique landscapes of the rivers explored.
+    </p>
 
     <hr />
     <h2>Branding</h2>
@@ -89,7 +94,7 @@
 
     <h3>Navigation with Hover</h3>
     <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
-    <nav>
+    <nav style="background-color: var(--accent1-color);">
       <a href="../index.html">Home</a>
       <a href="./page2.html">Page2</a>
       <a href="./contactus.html">Contact Us</a>
@@ -118,7 +123,7 @@
 
     <h3>[Page 2]</h3>
 
-   <img src="../image/wireframe.png" alt="page 2 wireframe">
+   <img src="../image/wireframe_page2.png" alt="page 2 wireframe">
   </main>
 </body>
 
