--- a/wwr/pages/site-plan-rafting.html
+++ b/wwr/pages/site-plan-rafting.html
@@ -92,6 +92,8 @@
 
     <!-- ------------------------Step 13------------------------------ -->
 
+  <!-- Test -->
+
     <h3>Navigation with Hover</h3>
     <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
     <nav style="background-color: var(--accent1-color);">
