--- a/wwr/pages/page2.html
+++ b/wwr/pages/page2.html
@@ -1,20 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../style/page2.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link type="text/css" rel="stylesheet" href="../style/page2.css" />
+    <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
 </head>
 <body>
-    <section class="content-block">
-        <div class="image-container">
-            <img src="../images/page2_1.png" alt="AI-Powered Note Organization">
-        </div>
-        <div class="text-container">
-            <h2>AI-Powered Note Organization</h2>
-            <p>AIMe categorizes and archives your notes using multi-layered AI.</p>
+
+<header>
+    <a id="logo_link" href="index.html">
+        <img class="logo" src="../image/logo.webp" alt="Dry Oar Logo">
+    </a>
+    <nav>
+        <a href="../index.html">Home</a>
+        <a href="../pages/page2.html">Page 2</a>
+        <a href="../pages/site-plan-rafting.html">Site Plan</a>
+        <a href="../pages/contactus.html">Contact Us</a>
+    </nav>
+</header>
+
+<div id="hero">
+    <div id="hero-box">
+        <img id="hero-img" src="../image/Hero.png" alt="People enjoying white water rafting">
+    </div>
+    <section id="hero-msg">
+        <h1 class="home-title">Have An Adventure</h1>
+        <h4>Make Memories with Dry Oar</h4>
+        <div class="button-box">
+            <a class="book" href="rates.html">Book Now</a>
         </div>
     </section>
+  </div>
+           
+
+        <main class="home-grid">
+            <section class="rivers-card">
+                <img class="card-img" src="../image/Rivers.jpg" alt="river in forest">
+                <img class="icon" src="../image/River Icon.png" alt="river icon">
+                <h2>Rivers</h2>
+            </section>
+            <section class="camping-card">
+                <img class="card-img" src="../image/Rapids.jpg" alt="tent in mountains">
+                <img class="icon" src="../image/Fire Icon 100x100.png" alt="fire icon">
+                <h2>Camping</h2>
+            </section>
+            <section class="rapids-card">
+                <img class="card-img" src="../image/Rapids.jpg" alt="rafting boat">
+                <img class="icon" src="../image/Oars.png" alt="oars icon">
+                <h2>Rapids</h2>
+            </section>
+            <div id="background"></div> 
+            <img class="mountains" src="../image/Mountains.jpg" alt="Misty mountains">
+            <section class="msg">
+                <h2>More Than Just The Thrill</h2>
+                <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
+                <a class='join' href="rivers.html">Join Us</a>
+            </section>
+
+        </main>
+        
+        <footer>
+            <p>Dry Oar &copy; 2025 - Adam Herrmann</p>
+            <p><a href="../pages/site-plan-rafting.html">Site Plan</a></p>
+            <p><a href="../pages/contactus.html">Contact Us</a></p>
+            <div class="social">
+                <a href="https://facebook.com" target="_blank">
+                    <img src="../image/Facebook Icon.png" alt="fb icon">
+                </a>
+                <a href="https://twitter.com" target="_blank">
+                    <img src="../image/Twitter Icon.png" alt="twitter icon">
+                </a>
+                <a href="https://instagram.com" target="_blank">
+                    <img src="../image/Instagram Icon.png" alt="instagram icon">
+                </a>
+            </div>
+        </footer>
+    </div>
+
 </body>
 </html>
