`Added new section to page2.html and updated page2.css to style it`

--- a/wwr/pages/page2.html
+++ b/wwr/pages/page2.html
@@ -33,6 +33,20 @@
     </section>
 </div>
 
+<section class="content-block">
+    <div class="video-container">
+        <video autoplay loop muted playsinline>
+            <source src="../videos/concept_v1.mp4" type="video/mp4" alt="AI-Powered Note">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+    <div class="text-container">
+        <h2>AI-Powered Note Organization</h2>
+        <p>AIMe categorizes and archives your notes using multi-layered AI.</p>
+    </div>
+</section>
+
+
 <footer>
     <p>Dry Oar &copy; 2025 - Adam Herrmann</p>
     <p><a href="../pages/site-plan-rafting.html">Site Plan</a></p>
