`Refactor page2.html and page2.css for Main Fork of the Salmon River, Idaho subpage`

--- a/wwr/pages/page2.html
+++ b/wwr/pages/page2.html
@@ -1,68 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="../style/page2.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
+  <meta charset="UTF-8">
+  <title>Main Fork of the Salmon River, Idaho</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Keep your same CSS link/path -->
+  <link rel="stylesheet" href="../style/page2.css">
 </head>
 <body>
 
-<header>
+  <!-- HEADER (unchanged) -->
+  <header>
     <a id="logo_link" href="index.html">
-        <img class="logo" src="../image/logo.webp" alt="Dry Oar Logo">
+      <img class="logo" src="../image/logo.webp" alt="Dry Oar Logo">
     </a>
     <nav>
-        <a href="../index.html">Home</a>
-        <a href="../pages/page2.html">Page 2</a>
-        <a href="../pages/site-plan-rafting.html">Site Plan</a>
-        <a href="../pages/contactus.html">Contact Us</a>
+      <a href="../index.html">Home</a>
+      <a href="../pages/page2.html">Page 2</a>
+      <a href="../pages/site-plan-rafting.html">Site Plan</a>
+      <a href="../pages/contactus.html">Contact Us</a>
     </nav>
-</header>
+  </header>
 
-<div id="hero">
-    <div id="hero-box">
-        <img id="hero-img" src="../image/Hero.png" alt="People enjoying white water rafting">
-    </div>
-    <section id="hero-msg">
-        <h1 class="home-title">Have An Adventure</h1>
-        <h4>Make Memories with Dry Oar</h4>
-        <div class="button-box">
-            <a class="book" href="rates.html">Book Now</a>
-        </div>
+  <!-- BEGIN SUBPAGE CONTENT -->
+  <main>
+    <!-- New Hero Section -->
+    <section class="subpage-hero">
+      <img 
+        src="../image/page2/hero.png" 
+        alt="Salmon River hero" 
+        class="subpage-hero-img"
+      >
+      <h1>Main Fork of the Salmon River, Idaho</h1>
     </section>
-</div>
 
-<section class="content-block">
-    <div class="video-container">
-        <video autoplay loop muted playsinline>
-            <source src="../videos/concept_v1.mp4" type="video/mp4" alt="AI-Powered Note">
-            Your browser does not support the video tag.
-        </video>
-    </div>
-    <div class="text-container">
-        <h2>AI-Powered Note Organization</h2>
-        <p>AIMe categorizes and archives your notes using multi-layered AI.</p>
-    </div>
-</section>
+    <!-- First raft section (two info boxes) -->
+    <section class="raft-section">
+      <img 
+        src="../images/page2/rafting1.jpg" 
+        alt="Group rafting on the Salmon River" 
+        class="raft-image"
+      >
+      <article class="info-box right-box">
+        <h2>What is included in the trip?</h2>
+        <p>
+          <!-- Replace with your real text -->
+          Nulla facilisi. Suspendisse commodo, tellus sed volutpat pretium, 
+          felis purus dictum elit, id facilisis arcu sem eget leo.
+        </p>
+      </article>
+      <article class="info-box left-box">
+        <h2>Is this a good trip for kids?</h2>
+        <p>
+          <!-- Replace with your real text -->
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+          Nunc tristique risus ut nisl vestibulum posuere.
+        </p>
+      </article>
+    </section>
 
+    <!-- Second raft section (single info box) -->
+    <section class="raft-section">
+      <img 
+        src="../images/page2/rafting2.jpg" 
+        alt="Canyon view on the Salmon River" 
+        class="raft-image"
+      >
+      <article class="info-box right-box">
+        <h2>What is so great about whitewater rafting anyway?</h2>
+        <p>
+          <!-- Replace with your real text -->
+          Phasellus fermentum, felis in aliquam placerat, risus ligula consequat justo. 
+          Vestibulum dapibus vitae sapien eget finibus.
+        </p>
+      </article>
+    </section>
 
-<footer>
-    <p>Dry Oar &copy; 2025 - Adam Herrmann</p>
+    <!-- Bottom text area -->
+    <section class="bottom-text">
+      <p>
+        <!-- Replace with your real text -->
+        Lorem ipsum 2025 Dolor sit Amet et. Replace this with more content or keep it as a short summary.
+      </p>
+    </section>
+  </main>
+  <!-- END SUBPAGE CONTENT -->
+
+  <!-- FOOTER (unchanged) -->
+  <footer>
+    <p>Dry Oar © 2025 - Adam Herrmann</p>
     <p><a href="../pages/site-plan-rafting.html">Site Plan</a></p>
     <p><a href="../pages/contactus.html">Contact Us</a></p>
     <div class="social">
-        <a href="https://facebook.com" target="_blank">
-            <img src="../image/Facebook Icon.png" alt="fb icon">
-        </a>
-        <a href="https://twitter.com" target="_blank">
-            <img src="../image/Twitter Icon.png" alt="twitter icon">
-        </a>
-        <a href="https://instagram.com" target="_blank">
-            <img src="../image/Instagram Icon.png" alt="instagram icon">
-        </a>
+      <a href="https://facebook.com" target="_blank">
+        <img src="../image/Facebook Icon.png" alt="fb icon">
+      </a>
+      <a href="https://twitter.com" target="_blank">
+        <img src="../image/Twitter Icon.png" alt="twitter icon">
+      </a>
+      <a href="https://instagram.com" target="_blank">
+        <img src="../image/Instagram Icon.png" alt="instagram icon">
+      </a>
     </div>
-</footer>
+  </footer>
 
 </body>
 </html>
